<resources>
    <!-- put string texts here -->

    <!-- Titles -->
    <string name="app_name">Pomodoro Timer (TISRBD)</string>

    <!-- Menu labels/titles (may use visibility to not visible in bottom nav control) -->
    <string name="menu_timer">Timer</string>
    <string name="menu_task">Task</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_dot">.</string>
    <string name="new_task">New Task</string>
    <string name="new_category">New Category</string>
    <string name="my_account">My Account</string>
    <string name="view_profile">View Profile</string>

    <!-- Titles and description labels -->
    <string name="title_label">Title</string>
    <string name="short_desc_label">Short Description</string>
    <string name="priority_level">Priority Level</string>
    <string name="priority_high">High</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_low">Low</string>
    <string name="pomodoro_count">Pomodoros</string>
    <string name="pomodoro_number_placeholder">4</string>
    <string name="desc_label">Description</string>
    <string name="desc_placeholder">(Optional)</string>
    <string name="add_task_category_label">Category</string>
    <string name="category_icon_selector_label">Category Icon</string>
    <string name="category_icon_selector_label2">Choose an Icon for your category</string>
    <string name="task_list_label">Tasks</string>
    <string name="ongoing_tasks">Ongoing Tasks</string>
    <string name="finished_tasks">Finished Tasks</string>
    <string name="category_list_label">Categories</string>
    <string name="login_title">Login</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="username_input">UserName</string>
    <string name="password_input">Password</string>
    <string name="confirm_password_input">Confirm Password</string>
    <string name="remember_me_label">Remember Me</string>
    <string name="show_password">Show password</string>
    <string name="forgot_password_label"><u>Forgot Password?</u></string>
    <string name="dont_have_an_account_label">Don\'t have an account?</string>
    <string name="sign_up_label"><u>Sign Up</u></string>
    <string name="sign_in_label">Sign in</string>
    <string name="or_label">Or</string>
    <string name="google_title">Google</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="notifications_label">Notifications</string>
    <string name="privacy_label">Privacy</string>
    <string name="logout_label">Logout</string>
    <string name="themes_selection_title">Theme Selection</string>
    <string name="alarm_title">Alarm</string>
    <string name="allow_notifications_label">Allow notifications</string>
    <string name="nudge_label">Nudge</string>
    <string name="pomodoro_timer_picker_title">Pomodoro</string>
    <string name="short_break_timer_picker_title">Short Break</string>
    <string name="long_break_timer_picker_title">Long Break</string>
    <string name="user_example_email">user@example.com</string>
    <string name="about_me_label">About Me</string>
    <string name="email_label">Email</string>
    <string name="total_pomodoros_label">Total pomodoros</string>
    <string name="total_focus_label">Total focus</string>
    <string name="total_break_times_label">Break time</string>

    <!-- Used Theme Settings Fragment -->
    <string-array name="theme_options">
        <item>Theme 1</item>
        <item>Theme 2</item>
    </string-array>

    <string-array name="alarm_options">
        <item>Alarm 1</item>
        <item>Alarm 2</item>
    </string-array>

    <!-- Image views or others content descriptions -->
    <string name="start_resume_pause_btn">Start or Resume or Pause button</string>
    <string name="add_task_category_btn">Add task or category button</string>
    <string name="add_task_in_category_btn">Add task button</string>
    <string name="add_category_btn">Add category button</string>
    <string name="category_icon">Category icon</string>
    <string name="dropdown_icon">Dropdown icon</string>
    <string name="google_icon">Google icon</string>
    <string name="back_icon_arrow">Back arrow</string>
    <string name="tomato_icon">Tomato icon</string>
    <string name="view_all_tasks">View all tasks</string>

    <string name="selector_icon_laptop">Selected_laptop_icon</string>
    <string name="selector_icon_book">Selected_book_icon</string>
    <string name="delete_btn">Delete Button</string>

    <!-- Misc or just placeholders -->
    <string name="fragment_ph_timer">This is the timer fragment</string>
    <string name="fragment_ph_task">This is the task fragment</string>
    <string name="fragment_ph_stats">This is the stats fragment</string>
    <string name="fragment_ph_settings">This is the settings fragment</string>
    <string name="cancel_btn">Cancel</string>
    <string name="save_btn">Save</string>
    <string name="percent_placeholder">30%</string>
    <string name="pomodoro_timer_default_text">25:00</string>
    <string name="short_break_timer_default_text">05:00</string>
    <string name="long_break_timer_default_text">15:00</string>
    <string name="colon_text">:</string>
    <string name="long_break_interval_label">Long break interval</string>
    <string name="auto_start_pomodoro_label">Auto start pomodoro</string>
    <string name="auto_start_breaks_label">Auto start breaks</string>
    <string name="you_have_no_tasks">You have no tasks</string>
    <string name="you_have_no_categories">You have no categories</string>

</resources>